@@ -1,10 +1,13 @@
 package Autobot;
 
+import java.io.File;
 import java.io.IOException;
 import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Set;
 import java.util.concurrent.ThreadLocalRandom;
+import java.util.concurrent.TimeUnit;
+
 import org.openqa.selenium.By;
 import org.openqa.selenium.JavascriptExecutor;
 import org.openqa.selenium.Keys;
@@ -24,55 +27,50 @@ public class backlinkbot {
 
 		WebDriver driver = Browserfactory.getBrowserInstance(currentDirectory ,browserName);
 		try {
-				  readfilealldata = readfile.getAllSites();
-				  allText = "";
-					for (String linebyline : readfilealldata) {
-						allText = allText + linebyline + "\r\n";
-					}
-			      ThreadLocalRandom random = ThreadLocalRandom.current();
+			  readfilealldata = readfile.getAllSites();
+			  allText = "";
+				for (String linebyline : readfilealldata) {
+					allText = allText + linebyline + "\r\n";
+				}
+		      ThreadLocalRandom random = ThreadLocalRandom.current();
 
-			      int rand = random.nextInt(0, readfilealldata.size()-1);
-			      System.out.println(readfilealldata.size());
-			      driver.get("http://www.indexkings.com/");
-			      driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
-			      WebElement elet1, elt31;
-			      elet1= driver.findElement(By.xpath("//textarea[@name='urls']"));
-			      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",    elet1);
-			      elet1.click();
-			      elet1.sendKeys(readfilealldata.get(rand));
-			      elt31= driver.findElement(By.xpath("//input[@value='RAPID INDEX!']"));
-			      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",    elt31);
-			      elt31.click();
-				     
+		      int rand = random.nextInt(0, readfilealldata.size()-1);
+		      System.out.println(readfilealldata.size());
+		      driver.get("https://megritools.com/backlink-generator");
+		      driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
+		      WebElement elet1, elt31;
+		      elet1= driver.findElement(By.xpath("//input[@id='myurl']"));
+		      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",    elet1);
+		      elet1.click();
+		      elet1.sendKeys(readfilealldata.get(rand));
+		      elt31= driver.findElement(By.xpath("//a[@class='btn btn-info']"));
+		      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",    elt31);
+		      elt31.click();
 			  } catch(Exception e) {
 				  System.out.println("site1");
 			  }
 			try {
-				Thread.sleep(1000);
-				 String myText = allText;
-				 myText = myText.replace("\n", Keys.chord(Keys.SHIFT, Keys.ENTER));
-				 ((JavascriptExecutor) driver).executeScript("window.open('http://pingfarm.com/')");
-				 driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
-				 Set<String> parent=driver.getWindowHandles();
-				 Object[] child=parent.toArray();
-				 driver.switchTo().window((String) child[1]);
-			     WebElement ele21, ele31;
-			     ele21= driver.findElement(By.xpath("//textarea[@name='urls']"));
-			     ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",     ele21);
-			     ele21.click();
-			     ele21.sendKeys( myText);
-			     ele31= driver.findElement(By.xpath("//input[@type='submit']"));
-			     ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",     ele31);
-			     ele31.click();
-
-
+				  String myText = allText;
+				  myText = myText.replace("\n", Keys.chord(Keys.SHIFT, Keys.ENTER));	
+				  ((JavascriptExecutor) driver).executeScript("window.open('http://pingfarm.com/')");
+				  driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
+				  Set<String> parent=driver.getWindowHandles();
+				  Object[] child=parent.toArray();
+				  driver.switchTo().window((String) child[1]);
+			      WebElement ele21, ele31;
+			      ele21= driver.findElement(By.xpath("//textarea[@name='urls']"));
+			      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",     ele21);
+			      ele21.click();
+			      ele21.sendKeys( myText);
+			      ele31= driver.findElement(By.xpath("//input[@type='submit']"));
+			      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",     ele31);
+			      ele31.click();
 			  } catch(Exception e) {
 				  System.out.println("site2");
 			  }
 			try {
-				Thread.sleep(1000);
 				((JavascriptExecutor) driver).executeScript("window.open('http://www.indexkings.com/')");
-				driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
+				driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(20));
 				Set<String> parent=driver.getWindowHandles();
 				Object[] child=parent.toArray();
 				driver.switchTo().window((String) child[2]);
@@ -89,9 +87,8 @@ public class backlinkbot {
 				  System.out.println("site3");
 			  }
 			try {
-				  String myText = allText;
-				  myText = myText.replace("\n", Keys.chord(Keys.SHIFT, Keys.ENTER));
-				  Thread.sleep(1000);
+				String myText = allText;
+				  myText = myText.replace("\n", Keys.chord(Keys.SHIFT, Keys.ENTER));	
 				  ((JavascriptExecutor) driver).executeScript("window.open('http://pingfarm.com/')");
 				  driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
 				  Set<String> parent=driver.getWindowHandles();
@@ -110,33 +107,37 @@ public class backlinkbot {
 			  }
 			
 			try {
-				  String myText = allText;
-				  myText = myText.replace("\n", Keys.chord(Keys.SHIFT, Keys.ENTER));
-				  Thread.sleep(1000);
-				  ((JavascriptExecutor) driver).executeScript("window.open('http://pingfarm.com/')");
-				  driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
+				  ArrayList<String> readfilealldata = readfile.getAllSites();
+			      ThreadLocalRandom random = ThreadLocalRandom.current();
+
+			      int rand = random.nextInt(0, readfilealldata.size()-1);
+			      ((JavascriptExecutor) driver).executeScript("window.open('http://pingomatic.com/')");
+			      driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
 				  Set<String> parent=driver.getWindowHandles();
 				  Object[] child=parent.toArray();
 				  driver.switchTo().window((String) child[4]);
-			      WebElement ele21, ele31;
-			      ele21= driver.findElement(By.xpath("//textarea[@name='urls']"));
-			      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",     ele21);
-			      ele21.click();
-			      ele21.sendKeys( myText);
-			      ele31= driver.findElement(By.xpath("//input[@type='submit']"));
-			      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",     ele31);
-			      ele31.click();
+				  WebElement elementpt, elementpt1, elementpt2;
+				  elementpt = driver.findElement(By.xpath("//input[@id='title']"));
+				  elementpt.clear();
+				  elementpt.click();
+				  elementpt.sendKeys(readfilealldata.get(rand));
+				  elementpt1 = driver.findElement(By.xpath("//input[@id='blogurl']"));
+				  ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",     elementpt1);
+				  elementpt1.clear();
+				  elementpt1.click();
+				  elementpt1.sendKeys(readfilealldata.get(rand));
+				  elementpt2= driver.findElement(By.xpath("//a[@class='bigbutton']"));
+				  ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",     elementpt2);
+				  elementpt2.click();
 				     
 			  } catch(Exception e) {
 				  System.out.println("site5");
 			  }
 			
 			try {
-				ArrayList<String> readfilealldata = readfile.getAllSites();
+				  ArrayList<String> readfilealldata = readfile.getAllSites();
 			      ThreadLocalRandom random = ThreadLocalRandom.current();
-
-			      int rand = random.nextInt(0, readfilealldata.size()-1);
-			      Thread.sleep(1000);
+			      int rand = random.nextInt(0, readfilealldata.size()-1);	
 				  ((JavascriptExecutor) driver).executeScript("window.open('https://megritools.com/backlink-generator')");
 				  driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
 				  Set<String> parent=driver.getWindowHandles();
@@ -158,8 +159,8 @@ public class backlinkbot {
 			try {
 				  ArrayList<String> readfilealldata = readfile.getAllSites();
 			      ThreadLocalRandom random = ThreadLocalRandom.current();
+
 			      int rand = random.nextInt(0, readfilealldata.size()-1);
-			      Thread.sleep(1000);
 				  ((JavascriptExecutor) driver).executeScript("window.open('http://cleverstat.com/backlink-maker')");
 				  driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
 				  Set<String> parent=driver.getWindowHandles();
@@ -173,38 +174,46 @@ public class backlinkbot {
 			      elt32= driver.findElement(By.xpath("//a[@id='checkButton']"));
 			      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",     elt32);
 			      elt32.click();
-
-			      
-				     
 			  } catch(Exception e) {
 				  System.out.println("site7");
 			  } 
 			try {
-				  ArrayList<String> readfilealldata = readfile.getAllSites();
-			      ThreadLocalRandom random = ThreadLocalRandom.current();
-			      int rand = random.nextInt(0, readfilealldata.size()-1);
-			      Thread.sleep(1000);
-				  ((JavascriptExecutor) driver).executeScript("window.open('http://seowagon.com/backlink-maker')");
-				  driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
-				  Set<String> parent=driver.getWindowHandles();
-				  Object[] child=parent.toArray();
-				  driver.switchTo().window((String) child[7]);
-			      WebElement elet1, elt31;
-			      elet1= driver.findElement(By.xpath("//input[@id='myurl']"));
-			      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",   elet1);
-			      elet1.click();
-			      elet1.sendKeys(readfilealldata.get(rand));
-			      elt31= driver.findElement(By.xpath("//a[@class='btn btn-info']"));
-			      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",   elt31);
-			      elt31.click();
-				     
+			    ArrayList<String> readfilealldata = readfile.getAllSites();
+		        ThreadLocalRandom random = ThreadLocalRandom.current();
+		        int rand = random.nextInt(0, readfilealldata.size()-1);
+			    ArrayList<String> readfilealldata1 = readfile.readMail();
+		        ThreadLocalRandom random1 = ThreadLocalRandom.current();
+		        int rand1 = random1.nextInt(0, readfilealldata1.size()-1);
+		        System.out.println(rand1);
+		        ((JavascriptExecutor) driver).executeScript("window.open('https://www.addme.com/submission/free-submission-start.php')");
+		        driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
+			    Set<String> parent=driver.getWindowHandles();
+			    Object[] child=parent.toArray();
+			    driver.switchTo().window((String) child[7]);
+			  	WebElement elementpt, elementpt1, elementpt2, elementpt3;
+			  	elementpt = driver.findElement(By.xpath("//input[@id='url']"));
+			    elementpt.click();
+			    elementpt.sendKeys(readfilealldata.get(rand));
+			    System.out.println(readfilealldata.get(rand));
+			    elementpt1 = driver.findElement(By.xpath("//input[@id='email']"));
+			    elementpt1.click();
+			    elementpt1.sendKeys(readfilealldata1.get(rand1));
+			    elementpt2 = driver.findElement(By.xpath("//input[@id='fname']"));
+			    elementpt2.click();
+			    ArrayList<String> readName = readfile.getName();
+			    ThreadLocalRandom randomName = ThreadLocalRandom.current();
+			    int randname = randomName.nextInt(0, readName.size()-1);
+			    elementpt2.sendKeys(readName.get(randname));
+			    driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
+			    elementpt3 = driver.findElement(By.xpath("//input[@type='Submit']"));
+			    ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",     elementpt3);
+			    elementpt3.click();
 			  } catch(Exception e) {
 				  System.out.println("site8");
 			  }
 			try {
 				  String myText = allText;
-				  myText = myText.replace("\n", Keys.chord(Keys.SHIFT, Keys.ENTER));
-				  Thread.sleep(1000);
+				  myText = myText.replace("\n", Keys.chord(Keys.SHIFT, Keys.ENTER));	
 				  ((JavascriptExecutor) driver).executeScript("window.open('http://pingfarm.com/')");
 				  driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
 				  Set<String> parent=driver.getWindowHandles();
@@ -225,7 +234,6 @@ public class backlinkbot {
 				  ArrayList<String> readfilealldata = readfile.getAllSites();
 			      ThreadLocalRandom random = ThreadLocalRandom.current();
 			      int rand = random.nextInt(0, readfilealldata.size()-1);
-			      Thread.sleep(1000);
 				  ((JavascriptExecutor) driver).executeScript("window.open('https://megritools.com/backlink-generator')");
 				  driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
 				  Set<String> parent=driver.getWindowHandles();
@@ -249,19 +257,25 @@ public class backlinkbot {
 	{	
 		WebDriver driver = Browserfactory.getBrowserInstance(currentDirectory ,browserName);
 		try {
-			  String myText = allText;
-			  myText = myText.replace("\n", Keys.chord(Keys.SHIFT, Keys.ENTER));
-			  Thread.sleep(1000);
-			  driver.get("http://www.indexkings.com/");
-			  driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
-		      WebElement ele21, ele31;
-		      ele21= driver.findElement(By.xpath("//textarea[@name='urls']"));
-		      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",   ele21);
-		      ele21.click();
-		      ele21.sendKeys( myText);
-		      ele31= driver.findElement(By.xpath("//input[@value='RAPID INDEX!']"));
-		      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",   ele31);
-		      ele31.click();
+			  readfilealldata = readfile.getAllSites();
+			  allText = "";
+				for (String linebyline : readfilealldata) {
+					allText = allText + linebyline + "\r\n";
+				}
+		      ThreadLocalRandom random = ThreadLocalRandom.current();
+
+		      int rand = random.nextInt(0, readfilealldata.size()-1);
+		      System.out.println(readfilealldata.size());
+		      driver.get("https://megritools.com/backlink-generator");
+		      driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
+		      WebElement elet1, elt31;
+		      elet1= driver.findElement(By.xpath("//input[@id='myurl']"));
+		      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",    elet1);
+		      elet1.click();
+		      elet1.sendKeys(readfilealldata.get(rand));
+		      elt31= driver.findElement(By.xpath("//a[@class='btn btn-info']"));
+		      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",    elt31);
+		      elt31.click();
 			  } catch(Exception e) {
 				  System.out.println("site11");
 			  }
@@ -269,67 +283,57 @@ public class backlinkbot {
 				  ArrayList<String> readfilealldata = readfile.getAllSites();
 			      ThreadLocalRandom random = ThreadLocalRandom.current();
 			      int rand = random.nextInt(0, readfilealldata.size()-1);
-			      Thread.sleep(1000);
-				  ((JavascriptExecutor) driver).executeScript("window.open('http://seowagon.com/backlink-maker')");
+				  ((JavascriptExecutor) driver).executeScript("window.open('https://www.pingmylinks.com/addurl/')");
 				  driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
 				  Set<String> parent=driver.getWindowHandles();
 				  Object[] child=parent.toArray();
 				  driver.switchTo().window((String) child[1]);
 			      WebElement elet1, elt31;
-			      elet1= driver.findElement(By.xpath("//input[@id='myurl']"));
+			      elet1= driver.findElement(By.xpath("//input[@name='furl']"));
 			      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",   elet1);
 			      elet1.click();
 			      elet1.sendKeys(readfilealldata.get(rand));
-			      driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
-			      elt31= driver.findElement(By.xpath("//a[@class='btn btn-info']"));
+			      elt31= driver.findElement(By.xpath("//input[@onclick='fAjaxReg();this.blur();']"));
 			      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",   elt31);
 			      elt31.click();
-				     
 			  } catch(Exception e) {
 				  System.out.println("site12");
 			  }
 			  try {
-				  ArrayList<String> readfilealldata = readfile.getAllSites();
-			      ThreadLocalRandom random = ThreadLocalRandom.current();
-			      int rand = random.nextInt(0, readfilealldata.size()-1);
-			      Thread.sleep(1000);
-				  ((JavascriptExecutor) driver).executeScript("window.open('http://cleverstat.com/backlink-maker')");
+				  String myText = allText;
+				  myText = myText.replace("\n", Keys.chord(Keys.SHIFT, Keys.ENTER));	
+				  ((JavascriptExecutor) driver).executeScript("window.open('http://pingfarm.com/')");
 				  driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
 				  Set<String> parent=driver.getWindowHandles();
 				  Object[] child=parent.toArray();
 				  driver.switchTo().window((String) child[2]);
-			      WebElement elet1, elt32;
-			      elet1= driver.findElement(By.xpath("//input[@id='myurl']"));
-			      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",     elet1);
-			      elet1.click();
-			      elet1.sendKeys(readfilealldata.get(rand));
-			      elt32= driver.findElement(By.xpath("//a[@id='checkButton']"));
-			      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",     elt32);
-			      elt32.click();
-
-			      
-				     
+			      WebElement ele21, ele31;
+			      ele21= driver.findElement(By.xpath("//textarea[@name='urls']"));
+			      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",     ele21);
+			      ele21.click();
+			      ele21.sendKeys( myText);
+			      ele31= driver.findElement(By.xpath("//input[@type='submit']"));
+			      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",     ele31);
+			      ele31.click();
 			  } catch(Exception e) {
 				  System.out.println("site13");
 			  } 
 			  try {
-					Thread.sleep(1000);
-					  String myText = allText;
-					  myText = myText.replace("\n", Keys.chord(Keys.SHIFT, Keys.ENTER));
-					  driver.get("http://www.indexkings.com/");
-					  driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
-					  Set<String> parent=driver.getWindowHandles();
-					  Object[] child=parent.toArray();
-					  driver.switchTo().window((String) child[3]);
-				      WebElement ele21, ele31;
-				      ele21= driver.findElement(By.xpath("//textarea[@name='urls']"));
-				      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",   ele21);
-				      ele21.click();
-				      ele21.sendKeys( myText);
-				      ele31= driver.findElement(By.xpath("//input[@value='RAPID INDEX!']"));
-				      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",   ele31);
-				      ele31.click();
-			     
+				  String myText = allText;
+				  myText = myText.replace("\n", Keys.chord(Keys.SHIFT, Keys.ENTER));	
+				  ((JavascriptExecutor) driver).executeScript("window.open('http://www.indexkings.com/')");
+				  driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
+				  Set<String> parent=driver.getWindowHandles();
+				  Object[] child=parent.toArray();
+				  driver.switchTo().window((String) child[3]);
+			      WebElement ele21, ele31;
+			      ele21= driver.findElement(By.xpath("//textarea[@name='urls']"));
+			      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",   ele21);
+			      ele21.click();
+			      ele21.sendKeys( myText);
+			      ele31= driver.findElement(By.xpath("//input[@value='RAPID INDEX!']"));
+			      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",   ele31);
+			      ele31.click();
 		  } catch(Exception e) {
 			  System.out.println("site14");
 		  }
@@ -337,7 +341,6 @@ public class backlinkbot {
 			  ArrayList<String> readfilealldata = readfile.getAllSites();
 		      ThreadLocalRandom random = ThreadLocalRandom.current();
 		      int rand = random.nextInt(0, readfilealldata.size()-1);
-		      Thread.sleep(1000);
 			  ((JavascriptExecutor) driver).executeScript("window.open('http://seowagon.com/backlink-maker')");
 			  driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
 			  Set<String> parent=driver.getWindowHandles();
@@ -360,7 +363,6 @@ public class backlinkbot {
 			  ArrayList<String> readfilealldata = readfile.getAllSites();
 		      ThreadLocalRandom random = ThreadLocalRandom.current();
 		      int rand = random.nextInt(0, readfilealldata.size()-1);
-		      Thread.sleep(1000);
 			  ((JavascriptExecutor) driver).executeScript("window.open('https://megritools.com/backlink-generator')");
 			  driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
 			  Set<String> parent=driver.getWindowHandles();
@@ -382,7 +384,6 @@ public class backlinkbot {
 			  ArrayList<String> readfilealldata = readfile.getAllSites();
 		      ThreadLocalRandom random = ThreadLocalRandom.current();
 		      int rand = random.nextInt(0, readfilealldata.size()-1);
-		      Thread.sleep(1000);
 			  ((JavascriptExecutor) driver).executeScript("window.open('https://tools.pingdom.com/#5b6be158c0800000')");
 			  driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
 			  Set<String> parent=driver.getWindowHandles();
@@ -393,7 +394,7 @@ public class backlinkbot {
 		      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",  ele21);
 		      ele21.click();
 		      ele21.sendKeys(readfilealldata.get(rand));
-		      elt32= driver.findElement(By.xpath("//input[@type='submit']"));
+		      elt32= driver.findElement(By.xpath("//input[@class='button cta-button test-button']"));
 		      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",  elt32);
 		      elt32.click();
 			     
@@ -404,7 +405,6 @@ public class backlinkbot {
 			  ArrayList<String> readfilealldata = readfile.getAllSites();
 		      ThreadLocalRandom random = ThreadLocalRandom.current();
 		      int rand = random.nextInt(0, readfilealldata.size()-1);
-		      Thread.sleep(1000);
 			  ((JavascriptExecutor) driver).executeScript("window.open('https://www.pingmylinks.com/addurl/')");
 			  driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
 			  Set<String> parent=driver.getWindowHandles();
@@ -418,50 +418,47 @@ public class backlinkbot {
 		      elt31= driver.findElement(By.xpath("//input[@onclick='fAjaxReg();this.blur();']"));
 		      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",   elt31);
 		      elt31.click();
-			     
 		  } catch(Exception e) {
 			  System.out.println("site18");
 		  }
 		  try {
-				Thread.sleep(1000);
-				  String myText = allText;
-				  myText = myText.replace("\n", Keys.chord(Keys.SHIFT, Keys.ENTER));
-				  driver.get("http://www.indexkings.com/");
-				  driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
-				  Set<String> parent=driver.getWindowHandles();
-				  Object[] child=parent.toArray();
-				  driver.switchTo().window((String) child[8]);
-			      WebElement ele21, ele31;
-			      ele21= driver.findElement(By.xpath("//textarea[@name='urls']"));
-			      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",   ele21);
-			      ele21.click();
-			      ele21.sendKeys( myText);
-			      ele31= driver.findElement(By.xpath("//input[@value='RAPID INDEX!']"));
-			      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",   ele31);
-			      ele31.click();
-			     
+			  ArrayList<String> readfilealldata = readfile.getAllSites();
+		      ThreadLocalRandom random = ThreadLocalRandom.current();
+		      int rand = random.nextInt(0, readfilealldata.size()-1);
+			  ((JavascriptExecutor) driver).executeScript("window.open('http://pingsitemap.com/')");
+			  driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
+			  Set<String> parent=driver.getWindowHandles();
+			  Object[] child=parent.toArray();
+			  driver.switchTo().window((String) child[8]);
+		      WebElement elet1, elt31;
+		      elet1= driver.findElement(By.xpath("//input[@class='textfield']"));
+		      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",   elet1);
+		      elet1.click();
+		      elet1.sendKeys(readfilealldata.get(rand));
+		      elt31= driver.findElement(By.xpath("//input[@type='submit']"));
+		      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",   elt31);
+		      elt31.click();
 		  } catch(Exception e) {
 			  System.out.println("site19");
 		  }
 		  
 		  try {
-			  String myText = allText;
-			  myText = myText.replace("\n", Keys.chord(Keys.SHIFT, Keys.ENTER));
-			  Thread.sleep(1000);
-			  ((JavascriptExecutor) driver).executeScript("window.open('http://pingfarm.com/')");
+			  ArrayList<String> readfilealldata = readfile.getAllSites();
+		      ThreadLocalRandom random = ThreadLocalRandom.current();
+		      int rand = random.nextInt(0, readfilealldata.size()-1);
+			  ((JavascriptExecutor) driver).executeScript("window.open('https://excitesubmit.com/')");
 			  driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
 			  Set<String> parent=driver.getWindowHandles();
 			  Object[] child=parent.toArray();
 			  driver.switchTo().window((String) child[9]);
-		      WebElement ele21, ele31;
-		      ele21= driver.findElement(By.xpath("//textarea[@name='urls']"));
-		      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",     ele21);
-		      ele21.click();
-		      ele21.sendKeys( myText);
-		      ele31= driver.findElement(By.xpath("//input[@type='submit']"));
-		      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",     ele31);
-		      ele31.click();
-			     
+		      WebElement elet1, elt31;
+		      elet1= driver.findElement(By.xpath("//input[@id='furl']"));
+		      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",   elet1);
+		      elet1.click();
+		      elet1.sendKeys(readfilealldata.get(rand));
+		      elt31= driver.findElement(By.xpath("//input[@name='button']"));
+		      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",   elt31);
+		      elt31.click();	     
 		  } catch(Exception e) {
 			  System.out.println("site20");
 		  }
@@ -472,7 +469,6 @@ public class backlinkbot {
 	  {
 		WebDriver driver = Browserfactory.getBrowserInstance(currentDirectory ,browserName);
 			try {
-				Thread.sleep(1000);
 				  String myText = allText;
 				  myText = myText.replace("\n", Keys.chord(Keys.SHIFT, Keys.ENTER));
 				  driver.get("http://www.indexkings.com/");
@@ -485,7 +481,6 @@ public class backlinkbot {
 			      ele31= driver.findElement(By.xpath("//input[@value='RAPID INDEX!']"));
 			      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",   ele31);
 			      ele31.click();
-				     
 			  } catch(Exception e) {
 				  System.out.println("site21");
 			  }
@@ -493,7 +488,6 @@ public class backlinkbot {
 				  ArrayList<String> readfilealldata = readfile.getAllSites();
 			      ThreadLocalRandom random = ThreadLocalRandom.current();
 			      int rand = random.nextInt(0, readfilealldata.size()-1);
-			      Thread.sleep(1000);
 				  ((JavascriptExecutor) driver).executeScript("window.open('http://seowagon.com/backlink-maker')");
 				  driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
 				  Set<String> parent=driver.getWindowHandles();
@@ -507,7 +501,6 @@ public class backlinkbot {
 			      elt31= driver.findElement(By.xpath("//a[@class='btn btn-info']"));
 			      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",   elt31);
 			      elt31.click();
-				     
 			  } catch(Exception e) {
 				  System.out.println("site22");
 			  }
@@ -515,44 +508,42 @@ public class backlinkbot {
 				  ArrayList<String> readfilealldata = readfile.getAllSites();
 			      ThreadLocalRandom random = ThreadLocalRandom.current();
 			      int rand = random.nextInt(0, readfilealldata.size()-1);
-			      Thread.sleep(1000);
-				  ((JavascriptExecutor) driver).executeScript("window.open('http://cleverstat.com/backlink-maker')");
+				  ((JavascriptExecutor) driver).executeScript("window.open('http://seowagon.com/backlink-maker')");
 				  driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
 				  Set<String> parent=driver.getWindowHandles();
 				  Object[] child=parent.toArray();
 				  driver.switchTo().window((String) child[2]);
-			      WebElement elet1, elt32;
+			      WebElement elet1, elt31;
 			      elet1= driver.findElement(By.xpath("//input[@id='myurl']"));
 			      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",   elet1);
 			      elet1.click();
 			      elet1.sendKeys(readfilealldata.get(rand));
-			      elt32= driver.findElement(By.xpath("//a[@id='checkButton']"));
-			      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",   elt32);
-			      elt32.click(); 
+			      driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
+			      elt31= driver.findElement(By.xpath("//a[@class='btn btn-info']"));
+			      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",   elt31);
+			      elt31.click(); 
 				     
 			  } catch(Exception e) {
 				  System.out.println("site23");
 			  }
 			
 			try {
-				 ArrayList<String> readfilealldata = readfile.getAllSites();
-			     ThreadLocalRandom random = ThreadLocalRandom.current();
-			     int rand = random.nextInt(0, readfilealldata.size()-1);
-			     Thread.sleep(1000);
-				((JavascriptExecutor) driver).executeScript("window.open('https://www.duplichecker.com/backlink-maker.php')");
-				driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
-				Set<String> parent=driver.getWindowHandles();
-				Object[] child=parent.toArray();
-				driver.switchTo().window((String) child[3]);
-				WebElement ele21, ele31;
-				ele21= driver.findElement(By.xpath("//input[@class='form-control input_style']"));
-				((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();", ele21);
-				ele21.click();
-				ele21.sendKeys(readfilealldata.get(rand));
-				ele31= driver.findElement(By.xpath("//input[@type=\"submit\"]"));
-				((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();", ele31);
-				ele31.click();
-
+				  ArrayList<String> readfilealldata = readfile.getAllSites();
+			      ThreadLocalRandom random = ThreadLocalRandom.current();
+			      int rand = random.nextInt(0, readfilealldata.size()-1);
+				  ((JavascriptExecutor) driver).executeScript("window.open('https://www.pingmylinks.com/addurl/')");
+				  driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
+				  Set<String> parent=driver.getWindowHandles();
+				  Object[] child=parent.toArray();
+				  driver.switchTo().window((String) child[3]);
+			      WebElement elet1, elt31;
+			      elet1= driver.findElement(By.xpath("//input[@name='furl']"));
+			      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",   elet1);
+			      elet1.click();
+			      elet1.sendKeys(readfilealldata.get(rand));
+			      elt31= driver.findElement(By.xpath("//input[@onclick='fAjaxReg();this.blur();']"));
+			      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",   elt31);
+			      elt31.click();
 			  } catch(Exception e) {
 				  System.out.println("site24");
 			  }
@@ -561,29 +552,26 @@ public class backlinkbot {
 				  ArrayList<String> readfilealldata = readfile.getAllSites();
 			      ThreadLocalRandom random = ThreadLocalRandom.current();
 			      int rand = random.nextInt(0, readfilealldata.size()-1);
-			      Thread.sleep(1000);
-				  ((JavascriptExecutor) driver).executeScript("window.open('https://megritools.com/backlink-generator')");
+				  ((JavascriptExecutor) driver).executeScript("window.open('https://us.mysiteslink.com/index.php')");
 				  driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
 				  Set<String> parent=driver.getWindowHandles();
 				  Object[] child=parent.toArray();
 				  driver.switchTo().window((String) child[4]);
-			      WebElement elet1, elt31;
-			      elet1= driver.findElement(By.xpath("//input[@id='myurl']"));
-			      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",  elet1);
-			      elet1.click();
-			      elet1.sendKeys(readfilealldata.get(rand));
-			      elt31= driver.findElement(By.xpath("//a[@class='btn btn-info']"));
-			      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",  elt31);
-			      elt31.click();
-				     
+			      WebElement elementpt11, elementpt2;
+			      elementpt11= driver.findElement(By.xpath("//input[@id='sn']"));
+			      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",     elementpt11);
+			      elementpt11.click();
+			      elementpt11.sendKeys(readfilealldata.get(rand));
+			      elementpt2= driver.findElement(By.xpath("//input[@id='ss']"));
+			      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",     elementpt2);
+			      elementpt2.click();
 			  } catch(Exception e) {
 				  System.out.println("site25");
 			  }
 			try {
-				ArrayList<String> readfilealldata = readfile.getAllSites();
+				  ArrayList<String> readfilealldata = readfile.getAllSites();
 			      ThreadLocalRandom random = ThreadLocalRandom.current();
-			      int rand = random.nextInt(0, readfilealldata.size()-1);
-			      Thread.sleep(1000);
+			      int rand = random.nextInt(0, readfilealldata.size()-1);	
 				  ((JavascriptExecutor) driver).executeScript("window.open('https://megritools.com/backlink-generator')");
 				  driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
 				  Set<String> parent=driver.getWindowHandles();
@@ -597,15 +585,13 @@ public class backlinkbot {
 			      ele31= driver.findElement(By.xpath("//a[@id='checkButton']"));
 			      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",  ele31);
 			      ele31.click();
-				     
 			  } catch(Exception e) {
 				  System.out.println("site26");
 			  }
 			
 			try {
 				  String myText = allText;
-				  myText = myText.replace("\n", Keys.chord(Keys.SHIFT, Keys.ENTER));
-				  Thread.sleep(1000);
+				  myText = myText.replace("\n", Keys.chord(Keys.SHIFT, Keys.ENTER));	
 				  ((JavascriptExecutor) driver).executeScript("window.open('http://pingfarm.com/')");
 				  driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
 				  Set<String> parent=driver.getWindowHandles();
@@ -626,7 +612,6 @@ public class backlinkbot {
 				  ArrayList<String> readfilealldata = readfile.getAllSites();
 			      ThreadLocalRandom random = ThreadLocalRandom.current();
 			      int rand = random.nextInt(0, readfilealldata.size()-1);
-			      Thread.sleep(1000);
 				  ((JavascriptExecutor) driver).executeScript("window.open('https://megritools.com/backlink-generator')");
 				  driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
 				  Set<String> parent=driver.getWindowHandles();
@@ -640,30 +625,29 @@ public class backlinkbot {
 			      elt31= driver.findElement(By.xpath("//a[@class='btn btn-info']"));
 			      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",  elt31);
 			      elt31.click();
-				     
 			  } catch(Exception e) {
 				  System.out.println("site28");
 			  }
 			  try {
-				  readfilealldata = readfile.getAllSites();
-				  allText = "";
-					for (String linebyline : readfilealldata) {
-						allText = allText + linebyline + "\r\n";
-					}
+				  ArrayList<String> readfilealldata = readfile.getAllSites();
 			      ThreadLocalRandom random = ThreadLocalRandom.current();
 			      int rand = random.nextInt(0, readfilealldata.size()-1);
-			      Thread.sleep(1000);
-			      ((JavascriptExecutor) driver).executeScript("window.open('https://www.prepostseo.com/backlinks-maker')");
+				  ((JavascriptExecutor) driver).executeScript("window.open('http://seowagon.com/backlink-maker')");
 				  driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
 				  Set<String> parent=driver.getWindowHandles();
 				  Object[] child=parent.toArray();
 				  driver.switchTo().window((String) child[8]);
 			      WebElement elet1, elt31;
-			      elet1= driver.findElement(By.xpath("//input[@id='inputURL']"));
-			      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",  elet1);
+			      elet1= driver.findElement(By.xpath("//input[@id='myurl']"));
+			      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",   elet1);
 			      elet1.click();
 			      elet1.sendKeys(readfilealldata.get(rand));
-			      elt31= driver.findElement(By.xpath("//input[@value=\"Create BackLinks\"]"));
+			      driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
+			      elt31= driver.findElement(By.xpath("//a[@class='btn btn-info']"));
+			      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",   elt31);
+			      elt31.click();
+			      elet1.sendKeys(readfilealldata.get(rand));
+			      elt31= driver.findElement(By.xpath("//input[@type='submit']"));
 			      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",  elt31);
 			      elt31.click();
 				     
@@ -671,24 +655,21 @@ public class backlinkbot {
 				  System.out.println("site29");
 			  }
 			  try {
-				  ArrayList<String> readfilealldata = readfile.getAllSites();
-				  ThreadLocalRandom random = ThreadLocalRandom.current();
-				  int rand = random.nextInt(0, readfilealldata.size()-1);
-				  Thread.sleep(1000);
-				  ((JavascriptExecutor) driver).executeScript("window.open('https://www.duplichecker.com/backlink-maker.php')");
+				  String myText = allText;
+				  myText = myText.replace("\n", Keys.chord(Keys.SHIFT, Keys.ENTER));	
+				  ((JavascriptExecutor) driver).executeScript("window.open('http://www.indexkings.com/')");
 				  driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
 				  Set<String> parent=driver.getWindowHandles();
 				  Object[] child=parent.toArray();
 				  driver.switchTo().window((String) child[9]);
-				  WebElement ele21, ele31;
-				  ele21= driver.findElement(By.xpath("//input[@placeholder=' Enter URL']"));
-				  ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();", ele21);
-				  ele21.click();
-				  ele21.sendKeys(readfilealldata.get(rand));
-				  ele31= driver.findElement(By.xpath("//input[@type='submit']"));
-				  ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();", ele31);
-				  ele31.click();
-
+			      WebElement ele21, ele31;
+			      ele21= driver.findElement(By.xpath("//textarea[@name='urls']"));
+			      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",   ele21);
+			      ele21.click();
+			      ele21.sendKeys( myText);
+			      ele31= driver.findElement(By.xpath("//input[@value='RAPID INDEX!']"));
+			      ((JavascriptExecutor) driver).executeScript("arguments[0].scrollIntoView();",   ele31);
+			      ele31.click();
 				  } catch(Exception e) {
 					  System.out.println("site30");
 				  }
@@ -744,12 +725,15 @@ public class backlinkbot {
 	    }
 
 	   @SuppressWarnings("deprecation")
-	static void googlerun() throws IOException
+	static void vpnrun() throws IOException
 		  {
 			
 			
 			try {
-				Runtime.getRuntime().exec("taskkill /F /IM chrome.exe /T");
+				ProcessBuilder pb = new ProcessBuilder("cmd", "/c", "runvpn.bat");
+				File dir = new File("C:\\Users\\shali\\OneDrive\\Desktop");
+				pb.directory(dir);
+				Process p = pb.start();
 				  } catch(Exception e) {
 					  System.out.println("error");
 				  }
